# bspline-fortran

./: .gitignore  BSPLINEConfig.cmake.in  BSPLINEConfigVersion.cmake.in  CMakeLists.txt  README.md
src/: CMakeLists.txt  bspline_module.f90  libbspline.pc.in
